--- a/exampleservice-b-deployment.yml
+++ b/exampleservice-b-deployment.yml
@@ -1,22 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: exampleservice-b-canary
+  name: exampleservice-b
   labels:
     app: exampleservice-b
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: exampleservice-b-canary
+      app: exampleservice-b
   template:
     metadata:
       labels:
-        app: exampleservice-b-canary
+        app: exampleservice-b
     spec:
       containers:
       - name: exampleservice-b
-        image: kevinhooke/examplespringboot-b:v0.0.2
+        image: kevinhooke/examplespringboot-b:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
+        
+#TODO how to define replicas for different pods, including the canary
