--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,6 @@ docker-build:
 k8s-deploy:
   stage: deploy
   script:
-    - kubectl apply -f exampleservice-b-deployment.yml
+    - kubectl apply -f exampleservice-b-pod.yml
 # deployment container=imagename:tag
-#  - kubectl set image deployment/exampleservice-a exampleservice-a=kevinhooke/examplespringboot-a:$CI_VERSION
+#  - kubectl set image deployment/exampleservice-b exampleservice-b=kevinhooke/examplespringboot-b:$CI_VERSION
