--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ docker-build:
 
 k8s-deploy:
   stage: deploy
+  when: manual
   script:
 #  - kubectl apply -f exampleservice-b-deployment.yml
 # deployment container=imagename:tag
