--- a/exampleservice-b-deployment.yml
+++ b/exampleservice-b-deployment.yml
@@ -20,3 +20,15 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: exampleservice-b
+spec:
+  ports:
+  - port: 8080
+    targetPort: 8080
+    name: http
+  selector:
+    app: exampleservice-b
