--- a/exampleservice-b-deployment.yml
+++ b/exampleservice-b-deployment.yml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: exampleservice-b
+  name: exampleservice-b-v2
   labels:
-    app: exampleservice-b
+    app: exampleservice-b-v2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: exampleservice-b
+      app: exampleservice-b-v2
   template:
     metadata:
       labels:
-        app: exampleservice-b
+        app: exampleservice-b-v2
     spec:
       containers:
-      - name: exampleservice-b
-        image: kevinhooke/examplespringboot-b:latest
+      - name: exampleservice-b-v2
+        image: kevinhooke/examplespringboot-b:v2-latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
