--- a/exampleservice-b-service.yml
+++ b/exampleservice-b-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: exampleservice-b
+  name: exampleservice-b-v2
 spec:
   ports:
   - port: 8080
     targetPort: 8080
     name: http
   selector:
-    app: exampleservice-b
+    app: exampleservice-b-v2
